# backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yaml  entrypoint.sh  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: build-push.yaml  lint-test.yaml  release.yaml
alembic/: env.py
alembic/versions/: 2024_11_27_1335-e58b89e64a84_add_fts.py  41d1c8bf967c_initial_migration.py
src/openbook/: auth.py  constants.py  database.py  exceptions.py  models.py  server.py
src/openbook/endpoints/: __init__.py  books.py  users.py
src/openbook/models/: orm.py  schemas.py
tests/: test_database.py
traefik/: traefik.toml
