[project]
name = "openbook"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{name = "OpenBook Developers", email = ""}]
dependencies = ["fastapi[standard]>=0.115.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

  [tool.pdm.dev-dependencies]
  dev = ["pre-commit>=4.0.1", "pytest>=8.3.3"]

  [tool.pdm.scripts]
  pre-commit = "pre-commit run --all-files"
  test = "pytest"
