[project]
name = "openbook"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{name = "OpenBook Developers", email = ""}]
dependencies = ["fastapi[standard]>=0.115.3", "sqlalchemy>=2.0.36", "alembic>=1.14.0", "pydantic-settings>=2.6.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

  [tool.pdm.dev-dependencies]
  dev = ["pre-commit>=4.0.1", "pytest>=8.3.3"]

  [tool.pdm.scripts]
  pre-commit = "pre-commit"
  test = "pytest"
  dev = "fastapi dev src/openbook/server.py"

[tool.ruff]
line-length = 120
exclude = ["alembic/versions/*"]

  [tool.ruff.lint]
  select = [
    "ANN",
    "B",
    "C4",
    "D",
    "DTZ",
    "E",
    "F",
    "I",
    "ISC",
    "INT",
    "N",
    "PGH",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TID",
    "UP",
    "W",
  ]
  ignore = [
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN102",
    "ANN204",
    "ANN206",
    "ANN401",
    "B904",
    "C401",
    "C408",
    "D100",
    "D104",
    "D105",
    "D107",
    "D203",
    "D212",
    "D214",
    "D215",
    "D301",
    "D400",
    "D401",
    "D402",
    "D404",
    "D405",
    "D406",
    "D407",
    "D408",
    "D409",
    "D410",
    "D411",
    "D412",
    "D413",
    "D414",
    "D416",
    "D417",
    "E731",
    "RET504",
    "RUF005",
    "RUF012",
    "RUF015",
    "S311",
    "SIM102",
    "SIM108",
  ]

    [tool.ruff.lint.isort]
    order-by-type = false
    case-sensitive = true
    combine-as-imports = true

    [tool.ruff.lint.per-file-ignores]
    "tests/*" = ["ANN", "D", "S101"]

[tool.pyright]
include = ["src/**/*.py"]

venvPath = "."
venv = ".venv"
